--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap');
-html {
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+#body-one {
     background-color: #FFDEE9;
     background-image: linear-gradient(334deg, #FFDEE9 0%, #B5FFFC 100%);
     background-attachment: fixed;
     background-size: auto;
+}
+
+#title {
+    text-align: center;
+    margin-top: 7em;
+    font-family: 'Dancing Script', cursive;
+    font-size: 40px;
 }
 
 .calculator {
@@ -78,6 +86,7 @@ html {
 #enter:hover {
     background-color: aqua;
 }
+
 
 @media only screen and (max-width: 414px) {
     .calculator {
